<resources>
    <string name="app_name">Praca popłaca</string>
    <string name="add_offert">Dodaj</string>
    <string name="search_offert">Szukaj</string>
    <string name="main_menu_settings">Ustawienia</string>
    <string name="main_menu_account">Konto</string>
    <string name="title_activity_main_settings">Opcje</string>
    <string name="messages_header">Wiadomości</string>
    <string name="sync_header">Synchronizuj</string>
    <string name="signature_title">Twój podpis</string>
    <string name="reply_title">Domyślna akcja odpowiedzi</string>
    <string name="sync_title">Synchronizuj e-mail okresowo</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="main_pracownik_intro_button">Pracownik</string>
    <string name="main_pracodawca_intro_button">Pracodawca</string>
    <string name="account_main_title">Konto</string>
    <string name="pracownik_main_title">Propozycje pracy</string>
    <string name="pracodawca_main_title">Oferty pracy</string>
    <string name="login">Logowanie</string>
    <string name="main_settings_title">Ustawienia</string>
    <string name="create_account_intro">Stwórz konto</string>
    <string name="guest_create_intro">Korzystaj jako gość</string>
    <string name="acc_create_username">Nazwa użytkownika</string>
    <string name="acc_create_email">E-mail</string>
    <string name="acc_create_email_hint">np. nazwa@poczta.pl</string>
    <string name="acc_create_acc_break">Konto</string>
    <string name="acc_create_acc_data_break">Szczegóły konta</string>
    <string name="acc_create_acc_type_employee">Pracownik</string>
    <string name="acc_create_acc_type_employer">Pracodawca</string>
    <string name="acc_create_password">Hasło</string>
    <string name="acc_create_repassword">Powtórz hasło</string>
    <string name="acc_create_name">Imię</string>
    <string name="acc_create_surname">Nazwisko</string>
    <string name="acc_create_company_name">Nazwa firmy</string>
    <string name="acc_create_phone">Numer telefonu</string>
    <string name="acc_create_city">Miasto</string>
    <string name="acc_create_nip">NIP</string>
    <string name="acc_create_register_button">Zarejestruj</string>
    <string name="acc_create_clean">Czyść</string>
    <string name="account_settings_title">Opcje</string>
    <string name="account_login_title">Logowanie</string>
    <string name="account_create_title">Rejestracja</string>
    <string name="login_welcome_message">Zaloguj</string>
    <string name="login_user_hint">Adres E-mail lub nazwa użytkownika</string>
    <string name="login_password">Hasło</string>
    <string name="login_button_login">Logowanie</string>
    <string name="account_edit_data_button">Edycja</string>
    <string name="account_radio_data_txt">Szczegóły konta</string>
    <string name="account_radio_follow_txt">Obserwowane</string>
    <string name="account_radio_offerts_txt">Oferty</string>
    <string name="account_edit_password_data_button">Zmień hasło</string>
    <string name="guest_account_intro_message">\"Nie masz konta, zarejestruj się, aby uzyskać dostęp do wszystkich możliwości aplikacji.</string>
    <string name="menu_nav_employee_city">Miasto</string>
    <string name="menu_nav_employee_date">Data</string>
    <string name="menu_nav_employee_category">Kategoria</string>
    <string name="menu_nav_employee_clear_engine">Czyść</string>
    <string name="menu_nav_employee_salary_min_per_hour">Minimalne wynagrodzenie na godzinę</string>
    <string name="menu_nav_employee_salary_max_per_hour">Maksymalne wynagrodzenie na godzinę</string>
    <string name="menu_nav_employee_salary_min">Minimalne wynagrodzenie</string>
    <string name="menu_nav_employee_salary_max">Maksymalne wynagrodzenie</string>
    <string name="nav_employee_open_drawer">Otwórz</string>
    <string name="nav_employee_close_drawer">Zamknij</string>
    <string name="login_account_intro">Logowanie</string>
    <string name="account_create_for_guest_button">Stwórz konto</string>
    <string name="account_login_for_guest_button">Logowanie</string>
    <string name="account_data_logout_button">Wyloguj</string>
    <string name="search_field">Szukaj</string>
    <string name="b_employer_city_filtr">Miasto</string>
    <string name="b_employer_date_filtr">Data</string>
    <string name="b_employer_category_filtr">Kategoria</string>
    <string name="b_employer_salary_filtr">Zarobek</string>
    <string name="b_employer_hours_filtr">Godziny</string>
    <string name="apply_filtr">Zastosuj filtr</string>
    <string name="Polish">Polski</string>
    <string name="English">Angielski</string>
    <string name="settings_language_label">Język</string>
    <string name="more">Więcej</string>
    <string name="less">Mniej</string>
    <string name="err_empty_salary_field">Pole zarobków nie może być puste.</string>
    <string name="data_at_day">Dnia:</string>
    <string name="date_from">Od dnia:</string>
    <string name="date_to">Do dnia:</string>
    <string name="EmployerOffert_title_label">Oferta pracodawcy</string>
    <string name="EmployerOffertList_title_label">Oferty pracowników</string>
    <string name="EmployerOffertInfo_title_label">Oferta pracownika</string>
    <string name="ammount">Ilość</string>
    <string name="apply">Zastosuj</string>
    <string name="salary_filtr_set_field">PLN</string>
    <string name="cancel_filtr">Usuń filtr</string>
    <string name="fromto_date">Od do</string>
    <string name="date_at">Dnia</string>
    <string name="filtr_box_hours_often_radiob">Regularnie</string>
    <string name="filtr_box_hours_once_radiob">Jednorazowo</string>
    <string name="EVH">Ilość godzin nie może być ujemna</string>
    <string name="err_empty_hours_field">Pole ilości nie może być puste.</string>
    <string name="error_empty_filtr">Nie udało się zastosować filtru.</string>
    <string name="employer_offert_create_title">Tworzenie oferty pracy</string>
    <string name="EMPRM_nazwa_hint">Nazwa oferty</string>
    <string name="EMPRM_phone_hint">Numer telefonu</string>
    <string name="EMPRM_address_hint">Ulica</string>
    <string name="EMPRM_addressnr_hint">Numer budynku</string>
    <string name="EMPRM_type">Typ oferty</string>
    <string name="EMPRM_type_dzielo">O dzieło</string>
    <string name="EMPRM_type_zlecenie">Zlecenie</string>
    <string name="EMPRM_type_work">O pracę</string>
    <string name="EMPRM_salary_once">   PLN   </string>
    <string name="EMPRM_salary_rep"> PLN/H </string>
    <string name="EMPRM_desc">Dodatkowy opis</string>
    <string name="zip_code">Kod pocztowy</string>
    <string name="EMPRM_l_cat">Kategoria: </string>
    <string name="EMPRM_firma">Firma</string>
    <string name="EMPRM_osoba_prywatna">Osoba prywatna</string>
    <string name="EMPRM_nip">NIP</string>
    <string name="wrong_password">Niepoprawne hasło.</string>
    <string name="wrong_user">Niepoprawny login.</string>
    <string name="welcome_unlogged">Witaj! Niezalogowano.</string>
    <string name="filters">Filtruj</string>
    <string name="validate_acc_create_email">Niepoprawny email.</string>
    <string name="validate_login_email">Niepoprawny email.</string>
    <string name="welcome">Witaj! Zalogowano na : </string>
    <string name="employer_offert_title">Oferta</string>
    <string name="validate_acc_create_phone_digits">Numer telefonu powinien składać się z 9 cyfr.</string>
    <string name="validate_acc_create_nip">NIP musi mieć 9 cyfr.</string>
    <string name="validate_acc_email_verify">Ten email jest już zarejestrowany.</string>
    <string name="validate_acc_password_match">Hasła się nie zgadzają.</string>
    <string name="validate_empty_fields">Żadne pole nie może być puste.</string>
    <string name="validate_phone_check">Ten numer jest już zarejestrowany.</string>
    <string name="db_insert_user_error">Wystąpił problem, prosimy spróbować później.</string>
    <string name="validate_acc_usname">Nazwa użytkownika jest zajęta.</string>
    <string name="acc_create_acc_type_employer_with_comp">Firma</string>
    <string name="acc_create_acc_type_employer_person">Osoba fizyczna</string>
    <string name="acc_create_address">Adres</string>
    <string name="acc_create_address_nr">Nr budynku</string>
    <string name="post_code">Kod pocztowy</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="validate_date_moreless">Data oferty od nie może być pózniej niż do.</string>
    <string name="acc_login_succes">Pomyślnie zalogowano</string>
    <string name="acc_offerts_add">Dodaj ofertę</string>
    <string name="EMPEM_title">Tytuł</string>
    <string name="employer_offert_none">Brak ofert</string>
    <string name="how_many_empr_offerts">Liczba ofert :</string>
    <string name="menu_basic">Menu</string>
    <string name="not_logged">Niezalogowano</string>
    <string name="validate_phone_length">Numer telefonu powinien mieć 9 cyfr</string>
    <string name="edit_password_popup_title">Zmiana hasła</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_new_password">Powtórz nowe hasło</string>
    <string name="l_employer_address">Adres</string>
    <string name="l_employer_city">Miasto</string>
    <string name="l_employer_phone">Numer kontaktowy</string>
    <string name="font_size">Rozmiar czcionki</string>
    <string name="employee_offert_create_title">Tworzenie propozycji pracy</string>
    <string name="employee_offert_title">Propozycja pracy</string>
    <string name="employer_offert_boss">Zleceniodawca</string>
    <string name="l_employer_offert_payment">Stawka</string>
    <string name="empr_offert_delete">Usuń ofertę</string>
    <string name="l_employer_offert_hours">Ilość godzin</string>
    <string name="l_employer_postcode">Kod pocztowy</string>
    <string name="l_employer_offert_type">Typ oferty</string>
    <string name="l_employer_offert_desc">Opis</string>
    <string name="l_employer_company_name">Nazwa firmy</string>
    <string name="l_employer_company_address">Adres</string>
    <string name="l_employer_offert_nip">NIP</string>
    <string name="l_employer_offert_email">Adres e-mail</string>
    <string name="l_employer_company_city">Miasto</string>
    <string name="l_employer_offert_data">Data</string>
    <string name="acc_create_phone_hint">np. 555444222</string>
    <string name="acc_create_nip_hint">np. 618100100</string>
    <string name="acc_create_address_hint">Nazwa ulicy</string>
    <string name="acc_create_address_nr_hint">np. 102</string>
    <string name="post_code_hint">np. 62800</string>
    <string name="salary">Wynagrodzenie</string>
    <string name="EMPE_phone_hint">Nr tel. kontaktowy</string>
    <string name="EMPEE_skills">Umiejętności / Usługi / Propozycje</string>
    <string name="EMPEE_Add_TAG">Dodaj TAG</string>
    <string name="EMPEE_OFEERT_MAKE">Utwórz propozycje</string>
    <string name="EMPEE_OFFERT_MAKE_Dane">Dane</string>
    <string name="employee_tags">Umiejętności / Usługi / Propozycje</string>
    <string name="employee_offert_employee">Dane właściciela oferty</string>
    <string name="wassearching">"Wyszukano : "</string>
    <string name="acc_employee">Konto pracownika</string>
    <string name="acc_employer">Konto pracodawcy</string>
    <string name="main_pracownik_intro_button_info">Propozycje pracy</string>
    <string name="main_pracodawca_intro_button_info">Oferty pracy</string>
</resources>