<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Employer_offert_make">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/employer_offert_create_title"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EMPRM_nazwa_hint"/>
            <EditText
                android:id="@+id/EMPRM_nazwa"
                android:hint="@string/EMPRM_nazwa_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_employer_category_filtr"/>
         <Spinner
                    android:id="@+id/EMPRM_cat"
                    android:tooltipText="@string/EMPRM_l_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:entries="@array/category_list"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EMPRM_phone_hint"/>
            <EditText
                android:id="@+id/EMPRM_phone"
                android:hint="@string/acc_create_phone_hint"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_create_address"/>
            <EditText
                android:id="@+id/EMPRM_address"
                android:hint="@string/EMPRM_address_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_create_address_nr"/>
            <EditText
                android:id="@+id/EMPRM_address_nr"
                android:hint="@string/acc_create_address_nr_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_create_city"/>
            <AutoCompleteTextView
                android:id="@+id/EMPRM_city"
                android:hint="@string/acc_create_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_code"/>
            <EditText
                android:id="@+id/EMPRM_postcode"
                android:hint="@string/post_code_hint"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="@string/EMPRM_type"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/EMPRM_type1"
                    android:text="@string/EMPRM_type_dzielo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="EMPRM_go_once"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/EMPRM_type2"
                    android:text="@string/EMPRM_type_zlecenie"
                    android:onClick="EMPRM_go_rep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/EMPRM_type3"
                    android:text="@string/EMPRM_type_work"
                    android:onClick="EMPRM_go_rep_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary"/>
                    <EditText
                        android:id="@+id/EMPRM_salary_once"
                        android:hint="@string/EMPRM_salary_once"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_employer_offert_payment"/>
                 <EditText
                android:hint="@string/EMPRM_salary_rep"
                     android:id="@+id/EMPRM_salary_am"
                android:visibility="gone"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
                <EditText
                    android:id="@+id/EMPRM_hours"
                    android:hint="@string/b_employer_hours_filtr"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/EMPR_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/EMPR_monday"
           android:text="@string/monday"
           android:onClick="EMPR_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EMPR_tuesday"
                    android:text="@string/tuesday"
                    android:onClick="EMPR_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EMPR_wednesday"
                    android:text="@string/wednesday"
                    android:onClick="EMPR_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EMPR_thursday"
                    android:text="@string/thursday"
                    android:onClick="EMPR_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EMPR_friday"
                    android:text="@string/friday"
                    android:onClick="EMPR_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EMPR_saturday"
                    android:text="@string/saturday"
                    android:onClick="EMPR_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EMPR_sunday"
                    android:text="@string/sunday"
                    android:onClick="EMPR_check"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:text="@string/date_from"
                    android:labelFor="@id/EMPR_date_from"
                    />
                <DatePicker
                    android:id="@+id/EMPR_date_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_to"
                    android:labelFor="@id/EMPR_date_to"
                    />
              <DatePicker
                    android:id="@+id/EMPR_date_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"/>
  </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EMPRM_desc"/>
                <EditText
                    android:id="@+id/EMPRM_desc"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/EMPRM_desc"
                    android:inputType="text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_offert"
                android:onClick="go_to_make"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>